--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ body{
   background-image: linear-gradient(to left, #e9d362 0%, #333333 100%);
 }
 .cat2{
-  background-image: linear-gradient(to left, #56CCF2 0%, #2F80ED 100%);
+  background-image: linear-gradient(to right, #ee9ca7 0%, #ffdde1 100%);
 }
 .cat3{
   background-image: linear-gradient(to left, #fe8c00 0%, #f83600 100%);
@@ -50,6 +50,29 @@ body{
 
 .categories h2{
   color: #fff;
+}
+
+.card-footer{
+border-top: none;
+background-color: #fff;
+
+}
+
+.card-title{
+  text-align: center;
+}
+
+.card-text{
+  text-align: center;
+}
+
+/* #shoes img{
+width: 80%;
+} */
+
+.shoe-1{
+  width: 70%;
+  margin: 0 auto;
 }
 
 
