--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@ body{
   border-radius: 5px;
   background-image: linear-gradient(to bottom, #fd9644 0%, #fa8231 100%);
   cursor: pointer;
+  margin-bottom: 10px;
 }
 
 .categories img{
@@ -76,4 +77,18 @@ margin: 0 auto;
   margin: 0 auto;
   }
 
+  #subscribe{
+    height: 300px;
+    background-color: #f7f1e3;
+    text-align: center;
+
+  }
+
+.subscribe-btn{
+  margin-top: 10px;
+}
+
+footer{
+text-align: center;
+}
 
